# eca

./: 20MatrixValues.csv  CMakeLists.txt  README.md  ansmatrix.cpp  ansmatrix.h  calc.h  calc.py  eca.kdev4  ecamatrix.cpp  ecamatrix.h  main.cpp  matrixparser.py  notes.txt
arduino-cmake/: arduino-cmake.kdev4
arduino-cmake/.kdev4/: arduino-cmake.kdev4
arduino-cmake/cmake/Platform/: Arduino.cmake
assembly/: compilerop-16.asm  optimized-12.asm  orig-22.asm
